# workspace

./: README.md
HelloYOLO/: infer.py  train.py  verify.py
HelloYOLO/Practice1.v1-roboflow-instant-1--eval-.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
HelloYOLO/Practice1.v1-roboflow-instant-1--eval-.yolov8/test/labels/: IMG_20250804_103033_BURST020_jpg.rf.6c7c5496f2f5d0b496c58fac26e26cf5.txt  IMG_20250804_103033_BURST029_jpg.rf.00d33765a195a754eb072757240f427c.txt  IMG_20250804_103033_BURST047_jpg.rf.1dccd2a14bc88e4f799a91efc47b25ee.txt  IMG_20250804_103033_BURST065_jpg.rf.a4c446a3c6c825712f57c94a23198177.txt  IMG_20250804_103033_BURST085_jpg.rf.f05e069766fb7d6ce66dc3c12f1f044a.txt
HelloYOLO/Practice1.v1-roboflow-instant-1--eval-.yolov8/train/: labels.cache
HelloYOLO/Practice1.v1-roboflow-instant-1--eval-.yolov8/valid/: labels.cache
HelloYOLO/runs/train/exp/: args.yaml
王庆-8.8-1/: CMakeLists.txt  Makefile  README.md
王庆-8.8-1/inc/: main.h  method1.h  method2.h  method3.h
王庆-8.8-1/src/: main.c
王庆-8.8-1/tools/: method1.c  method2.c  method3.c
王庆-8.8-2/: CMakeLists.txt  README.md
王庆-8.8-2/inc/: solve.h  vector_math.h
王庆-8.8-2/src/: solve.c
王庆-8.8-2/tools/: vector_math.c
王庆-8.8-3/: CMakeLists.txt
王庆-8.8-3/inc/: solve.h
王庆-8.8-3/src/: solve.c
王庆-8.8-4/: CMakeLists.txt
王庆-8.8-4/inc/: main.h
王庆-8.8-4/src/: main.c
王庆-8.9-1/: CMakeLists.txt
王庆-8.9-1/inc/: main.h  tools.h
王庆-8.9-1/src/: main.c
王庆-8.9-1/tools/: tools.c
王庆-8.9-2/: CMakeLists.txt
王庆-8.9-2/inc/: tools.h
王庆-8.9-2/src/: main.c
王庆-8.9-2/tools/: tools.c
(+52 files in other folders)
